feat: implement heartbeat mechanism in RaftNode and enhance message handling in RaftNodeHandler